# grpca

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: changelog.md  getting-started.md  index.md  theory.md
docs/api/: diagnostics.md  estimator.md  graphs.md  inference.md  metrics.md  splitters.md
docs/user-guide/: basic-usage.md  cross-validation.md  diagnostics.md  graphs.md  missing-data.md  rolling-windows.md
grpca/: __init__.py  diagnostics.py  estimator.py  graphs.py  inference.py  metrics.py  splitters.py
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/diagnostics/: index.html
site/api/estimator/: index.html
site/api/graphs/: index.html
site/api/inference/: index.html
site/api/metrics/: index.html
site/api/splitters/: index.html
site/changelog/: index.html
site/getting-started/: index.html
site/search/: search_index.json
site/theory/: index.html
site/user-guide/basic-usage/: index.html
site/user-guide/cross-validation/: index.html
site/user-guide/diagnostics/: index.html
site/user-guide/graphs/: index.html
site/user-guide/missing-data/: index.html
site/user-guide/rolling-windows/: index.html
tests/: conftest.py  test_diagnostics.py  test_glrm_grpca.py  test_gr_pca.py  test_graphs.py  test_inference.py  test_metrics.py  test_splitters.py
