[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grpca"
version = "0.1.0"
description = "Graph-Regularized PCA with sklearn-compatible API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "scipy>=1.10",
  "scikit-learn>=1.2",
]

[project.optional-dependencies]
test = [
  "pytest>=7.0",
  "pandas>=1.5",
]

[tool.setuptools]
packages = ["grpca"]
